--- a/config/application.yml
+++ b/config/application.yml
@@ -21,7 +21,7 @@
 
    SEND_CLOUD_USER_NAME: "panyujin_test_MGVNjk"  # 你的 API_USER
 
-   SEND_CLOUD_USER_KEY: "WD49yKjXUGFugY7D"  # 你的 API_KEY
+   SEND_CLOUD_USER_KEY: "XbuCpLtVCYExyRVX"  # 你的 API_KEY
 
 
 
@@ -37,4 +37,4 @@
 
    SEND_CLOUD_USER_NAME: "panyujin_test_MGVNjk"  # 你的 API_USER
 
-   SEND_CLOUD_USER_KEY: "WD49yKjXUGFugY7D"  # 你的 API_KEY
+   SEND_CLOUD_USER_KEY: "XbuCpLtVCYExyRVX"  # 你的 API_KEY
